--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-syntax-highlighter": "^16.1.0",
     "swiper": "^11.2.10",
     "tailwind-merge": "^2.6.0"
   },
@@ -40,6 +41,7 @@
     "@types/node": "^20.19.25",
     "@types/react": "^19.2.1",
     "@types/react-dom": "^19.2.1",
+    "@types/react-syntax-highlighter": "^15.5.13",
     "@types/react-transition-group": "^4.4.12",
     "eslint": "^9.39.1",
     "eslint-config-next": "16.0.7",
