--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,10 @@
 {
     "svg.preview.background": "editor",
-    "chat.mcp.enabled": true,
-    "chat.mcp.discovery.enabled": true
+    "chat.mcp.discovery.enabled": {
+        "claude-desktop": true,
+        "windsurf": true,
+        "cursor-global": true,
+        "cursor-workspace": true
+    },
+    "chat.mcp.access": "all"
 }
