--- a/package.json
+++ b/package.json
@@ -34,8 +34,10 @@
     "react-dnd-html5-backend": "^16.0.1",
     "react-dom": "^19.2.0",
     "react-dropzone": "^14.3.8",
+    "react-markdown": "^10.1.0",
     "react-rnd": "^10.5.2",
     "react-syntax-highlighter": "^16.1.0",
+    "remark-gfm": "^4.0.1",
     "swiper": "^11.2.10"
   },
   "devDependencies": {
